# mev

./: .gitignore  Cargo.toml  Makefile  hotlist.json  jito_validators.json  manual_hotlist.json
deployment/: crontab.txt  mev-copytrade.service  mev-engine.service  mev-gateway.service  mev-scanner.service
monitoring/: docker-compose.yml
monitoring/grafana-provisioning/alerting/: alert_rules.yml  contact_points.yml  notification_policies.yml
monitoring/grafana-provisioning/dashboards/: control_center.json  dashboards.yml  debug_center.json  financial_analysis.json
monitoring/grafana-provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
src/: communication.rs  config.rs  lib.rs  main.rs
src/data_pipeline/: geyser_connector.rs  manual_pools.rs  mod.rs  onchain_scanner.rs  unified_discovery.rs
src/data_pipeline/api_connectors/: birdeye.rs  dexscreener.rs  mod.rs
src/data_pipeline/dex_implementations/: mod.rs
src/data_pipeline/discovery/: mod.rs  orca.rs  raydium.rs
src/decoders/: mod.rs  pool_factory.rs  pool_operations.rs
src/decoders/meteora/: mod.rs
src/decoders/meteora/damm_v1/: events.rs  math.rs  mod.rs  pool.rs  test.rs
src/decoders/meteora/damm_v2/: events.rs  math.rs  mod.rs  pool.rs  test.rs
src/decoders/meteora/dlmm/: events.rs  math.rs  mod.rs  pool.rs  test.rs
src/decoders/meteora_decoders/: amm.rs  damm_v2.rs  dlmm.rs  mod.rs
src/decoders/orca/: mod.rs
src/decoders/orca/amm_v1/: mod.rs  pool.rs  test.rs
src/decoders/orca/amm_v2/: mod.rs  pool.rs  test.rs
src/decoders/orca/whirlpool/: config.rs  events.rs  math.rs  mod.rs  pool.rs  test.rs  tick_array.rs
src/decoders/orca_decoders/: mod.rs  tick_array.rs  token_swap_v1.rs  token_swap_v2.rs  whirlpool_decoder.rs
src/decoders/pump/amm/: events.rs  mod.rs  pool.rs  test.rs
src/decoders/pump_decoders/: amm.rs  mod.rs
src/decoders/raydium/: mod.rs
src/decoders/raydium/amm_v4/: events.rs  mod.rs  openbook_market.rs  pool.rs  test.rs
src/decoders/raydium/clmm/: config.rs  events.rs  full_math.rs  math.rs  mod.rs  pool.rs  test.rs  tick_array.rs  tickarray_bitmap_extension.rs
src/decoders/raydium/cpmm/: config.rs  events.rs  mod.rs  pool.rs  test.rs
src/decoders/raydium/launchpad/: config.rs  events.rs  math.rs  mod.rs  pool.rs  test.rs
src/decoders/raydium/stable_swap/: events.rs  math.rs  mod.rs  pool.rs  test.rs
src/decoders/raydium_decoders/: amm_config.rs  amm_v4.rs  clmm_config.rs  clmm_pool.rs  cpmm.rs  global_config.rs  launchpad.rs  mod.rs  stable_swap.rs  tick_array.rs  tickarray_bitmap_extension.rs
src/decoders/spl_token_decoders/: account.rs  mint.rs  mod.rs
src/execution/: bundle_builder.rs  bundle_sender.rs  confirmation_service.rs  cu_manager.rs  fee_manager.rs  mod.rs  optimizer.rs  protections.rs  routing.rs  sender.rs  simulate.rs  simulator.rs  transaction_builder.rs
src/filtering/: cache.rs  census.rs  engine.rs  mod.rs  watcher.rs
src/graph_engine/: mod.rs
src/math/: clmm_math.rs  dlmm_math.rs  full_math.rs  launchpad_math.rs  meteora_stableswap_math.rs  mod.rs  orca_whirlpool_math.rs  spl_token_swap_math.rs  stableswap_math.rs
src/middleware/: final_simulator.rs  mod.rs  protection_calculator.rs  quote_validator.rs  transaction_builder.rs
src/monitoring/: logging.rs  metrics.rs  mod.rs
src/rpc/: mod.rs  resilient_client.rs
src/state/: balance_manager.rs  balance_tracker.rs  global_cache.rs  leader_schedule.rs  mod.rs  slot_metronome.rs  slot_tracker.rs  validator_intel.rs
src/strategies/: backrunner.rs  copy_trade.rs  mod.rs  spam_onchain.rs  spatial.rs  spfa_arb.rs
