[package]
name = "mev"
version = "0.1.0"
edition = "2021" # Je suggère de mettre 2021, car 2024 est très récent.

[dependencies]
# --- Interaction Principale avec Solana ---
solana-client = "2.3.7" # Vous avez mentionné utiliser 2.3.7, gardons-la
solana-sdk = "2.3.1" # Gardons une version compatible

# --- LA CORRECTION EST ICI ---
# On désactive les features par défaut et on active uniquement "client" ou "default" sans "program"
spl-token = { version = "8.0.0", default-features = false, features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0", default-features = false, features = ["no-entrypoint", "zk-ops"] }
spl-associated-token-account = "7.0.0"

# Le reste de vos dépendances est probablement bon, mais assurez-vous de la cohérence
anchor-lang = "0.31.1"
borsh = "1.5.7"
bytemuck = "1.23.1"
# ... etc.

# Assurez-vous que les versions de solana-* sont cohérentes
solana-program = "2.3.0"
solana-program-pack = "2.2.1"
solana-account-decoder = "2.3.5"
solana-transaction-status = "2.3.7"

# Le reste de vos dépendances...
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
bs58 = "0.5.1"
base64 = "0.22.1"
hex = "0.4.3"
arc-swap = "1.7.1"
fixed = "1.29.0"
spl-math = "0.3.0"
dotenvy = "0.15"
envy = "0.4.2"
tracing = "0.1.41"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter"] }
uint = "0.10.0"
num-integer = "0.1.46"
futures = "0.3.31"
anchor-spl = "0.31.1"
bincode = "1.3.3"
openbook_dex = "0.5.6"
spl-memo = "6.0.0"
async-trait = "0.1.89"
serde_arrays = "0.2.0"
futures-util = "0.3.31"
chrono = "0.4.41"
solana-address-lookup-table-program = { git = "https://github.com/solana-program/address-lookup-table", package = "solana-address-lookup-table-program" }
spl-stake-pool = "2.0.3"
solana-sdk-ids = "2.2.1"



# --- Dépendances pour le Client Geyser gRPC ---
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
tonic = "0.14.2"
prost = "0.14.1"
tokio-stream = "0.1.17"




# --- Dépendances pour Jito --





[[bin]]
name = "execution_bot"
path = "src/bin/execution_bot.rs"

[[bin]]
name = "census_runner"
path = "src/bin/census_runner.rs"

[[bin]]
name = "filtering_bot"
path = "src/bin/filtering_bot.rs"